Fix gap in Hulk

--- a/sass/_hulk.scss
+++ b/sass/_hulk.scss
@@ -208,11 +208,11 @@
 }
 
 #hulk-web-1 {
-    width: 33px;
+    width: 34px;
     height: 63px;
     background: #638b30;
     top: 130px;
-    left: 127px;
+    left: 126px;
     border-radius: 0 0 0 20px;
 }
 
